Book Data Layet Complete.

--- a/WOTAPI.Data/WOTAPI.Data.csproj
+++ b/WOTAPI.Data/WOTAPI.Data.csproj
@@ -56,11 +56,21 @@
   <ItemGroup>
     <Compile Include="Book.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202106241907594_BookDbSetAdded.cs" />
+    <Compile Include="Migrations\202106241907594_BookDbSetAdded.Designer.cs">
+      <DependentUpon>202106241907594_BookDbSetAdded.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202106241907594_BookDbSetAdded.resx">
+      <DependentUpon>202106241907594_BookDbSetAdded.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
