--- a/WOTAPI.Models/WOTAPI.Models.csproj
+++ b/WOTAPI.Models/WOTAPI.Models.csproj
@@ -54,11 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Book\BookListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Book\" />
     <Folder Include="Chapter\" />
     <Folder Include="Character\" />
     <Folder Include="Nation\" />
