BooksListItem returning null.  GUID added to Book Object. Migrated.

--- a/WOTAPI.Data/WOTAPI.Data.csproj
+++ b/WOTAPI.Data/WOTAPI.Data.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Migrations\202106241921159_ComputerTellsMeToMigrate.Designer.cs">
       <DependentUpon>202106241921159_ComputerTellsMeToMigrate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202106241957506_GUIDadded.cs" />
+    <Compile Include="Migrations\202106241957506_GUIDadded.Designer.cs">
+      <DependentUpon>202106241957506_GUIDadded.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -77,6 +81,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202106241921159_ComputerTellsMeToMigrate.resx">
       <DependentUpon>202106241921159_ComputerTellsMeToMigrate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106241957506_GUIDadded.resx">
+      <DependentUpon>202106241957506_GUIDadded.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
