--- a/WOTAPI.Models/WOTAPI.Models.csproj
+++ b/WOTAPI.Models/WOTAPI.Models.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Book\BookCreate.cs" />
     <Compile Include="Book\BookListItem.cs" />
+    <Compile Include="Chapter\ChapterCreate.cs" />
     <Compile Include="Chapter\ChapterListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
