--- a/WOTAPI.WebMVC/WOTAPI.WebMVC.csproj
+++ b/WOTAPI.WebMVC/WOTAPI.WebMVC.csproj
@@ -240,6 +240,7 @@
     <Content Include="Views\Book\Index.cshtml" />
     <Content Include="Views\Chapter\Index.cshtml" />
     <Content Include="Views\Chapter\Create.cshtml" />
+    <Content Include="Views\Book\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
