--- a/WOTAPI.Services/WOTAPI.Services.csproj
+++ b/WOTAPI.Services/WOTAPI.Services.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="BookService.cs" />
     <Compile Include="ChapterService.cs" />
+    <Compile Include="CharacterService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
