--- a/WOTAPI.Services/WOTAPI.Services.csproj
+++ b/WOTAPI.Services/WOTAPI.Services.csproj
@@ -57,6 +57,7 @@
     <Compile Include="BookService.cs" />
     <Compile Include="ChapterService.cs" />
     <Compile Include="CharacterService.cs" />
+    <Compile Include="NationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
