--- a/WOTAPI.WebMVC/WOTAPI.WebMVC.csproj
+++ b/WOTAPI.WebMVC/WOTAPI.WebMVC.csproj
@@ -173,6 +173,7 @@
     <Compile Include="Controllers\CharacterController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\NationController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -244,6 +245,8 @@
     <Content Include="Views\Character\Create.cshtml" />
     <Content Include="Views\Chapter\Index.cshtml" />
     <Content Include="Views\Chapter\Create.cshtml" />
+    <Content Include="Views\Nation\Index.cshtml" />
+    <Content Include="Views\Nation\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
